--- a/main.tex
+++ b/main.tex
@@ -2484,7 +2484,7 @@ C.~Angiuli, E.~Morehouse, D.~R. Licata, and R.~Harper.
   on Functional Programming}, ICFP '14, pages 243--256, New York, NY, USA,
   2014. ACM.
 \newblock ISBN 978-1-4503-2873-9.
-\newblock \doi{10.1145/2628136.2628158}.
+\newblock \doi{10.1145/2628136.2628158}
 \newblock URL \url{http://doi.acm.org/10.1145/2628136.2628158}.
 
 \bibitem[Apel et~al.(2011)Apel, Liebig, Brandl, Lengauer, and
@@ -2495,7 +2495,7 @@ S.~Apel, J.~Liebig, B.~Brandl, C.~Lengauer, and C.~K\"{a}stner.
   European Conference on Foundations of Software Engineering}, ESEC/FSE '11,
   pages 190--200, New York, NY, USA, 2011. ACM.
 \newblock ISBN 978-1-4503-0443-6.
-\newblock \doi{10.1145/2025113.2025141}.
+\newblock \doi{10.1145/2025113.2025141}
 \newblock URL \url{http://doi.acm.org/10.1145/2025113.2025141}.
 
 \bibitem[Balasubramaniam and Pierce(1998)]{Pierce98}
@@ -2505,7 +2505,7 @@ S.~Balasubramaniam and B.~C. Pierce.
   Conference on Mobile Computing and Networking}, MobiCom '98, pages 98--108,
   New York, NY, USA, 1998. ACM.
 \newblock ISBN 1-58113-035-X.
-\newblock \doi{10.1145/288235.288261}.
+\newblock \doi{10.1145/288235.288261}
 \newblock URL \url{http://doi.acm.org/10.1145/288235.288261}.
 
 \bibitem[Bergroth et~al.(2000)Bergroth, Hakonen, and Raita]{Berg00}
@@ -2525,7 +2525,7 @@ A.~Bove, P.~Dybjer, and U.~Norell.
   Proving in Higher Order Logics}, TPHOLs '09, pages 73--78, Berlin,
   Heidelberg, 2009. Springer-Verlag.
 \newblock ISBN 978-3-642-03358-2.
-\newblock \doi{10.1007/978-3-642-03359-9_6}.
+\newblock \doi{10.1007/978-3-642-03359-9_6}
 \newblock URL \url{http://dx.doi.org/10.1007/978-3-642-03359-9_6}.
 
 \bibitem[Chacon(2009)]{Git}
@@ -2539,7 +2539,7 @@ S.~S. Chawathe and H.~Garcia-Molina.
 \newblock Meaningful change detection in structured data.
 \newblock \emph{SIGMOD Rec.}, 26\penalty0 (2):\penalty0 26--37, June 1997.
 \newblock ISSN 0163-5808.
-\newblock \doi{10.1145/253262.253266}.
+\newblock \doi{10.1145/253262.253266}
 \newblock URL \url{http://doi.acm.org/10.1145/253262.253266}.
 
 \bibitem[Chawathe et~al.(1996)Chawathe, Rajaraman, Garcia-Molina, and
@@ -2548,7 +2548,7 @@ S.~S. Chawathe, A.~Rajaraman, H.~Garcia-Molina, and J.~Widom.
 \newblock Change detection in hierarchically structured information.
 \newblock \emph{SIGMOD Rec.}, 25\penalty0 (2):\penalty0 493--504, June 1996.
 \newblock ISSN 0163-5808.
-\newblock \doi{10.1145/235968.233366}.
+\newblock \doi{10.1145/235968.233366}
 \newblock URL \url{http://doi.acm.org/10.1145/235968.233366}.
 
 \bibitem[Foster et~al.(2007)Foster, Greenwald, Kirkegaard, Pierce, and
@@ -2558,7 +2558,7 @@ J.~N. Foster, M.~B. Greenwald, C.~Kirkegaard, B.~C. Pierce, and A.~Schmitt.
 \newblock \emph{J. Comput. Syst. Sci.}, 73\penalty0 (4):\penalty0 669--689,
   June 2007.
 \newblock ISSN 0022-0000.
-\newblock \doi{10.1016/j.jcss.2006.10.024}.
+\newblock \doi{10.1016/j.jcss.2006.10.024}
 \newblock URL \url{http://dx.doi.org/10.1016/j.jcss.2006.10.024}.
 
 \bibitem[Khanna et~al.(2007)Khanna, Kunal, and Pierce]{PierceDiff3}
@@ -2569,7 +2569,7 @@ S.~Khanna, K.~Kunal, and B.~Pierce.
   \emph{Lecture Notes in Computer Science}, pages 485--496. Springer Berlin
   Heidelberg, 2007.
 \newblock ISBN 978-3-540-77049-7.
-\newblock \doi{10.1007/978-3-540-77050-3_40}.
+\newblock \doi{10.1007/978-3-540-77050-3_40}
 \newblock URL \url{http://dx.doi.org/10.1007/978-3-540-77050-3_40}.
 
 \bibitem[Lempsink et~al.(2009)Lempsink, Leather, and L\"{o}h]{Lemp09}
@@ -2578,7 +2578,7 @@ E.~Lempsink, S.~Leather, and A.~L\"{o}h.
 \newblock In \emph{Proceedings of the 2009 ACM SIGPLAN Workshop on Generic
   Programming}, WGP '09, pages 61--72, New York, NY, USA, 2009. ACM.
 \newblock ISBN 978-1-60558-510-9.
-\newblock \doi{10.1145/1596614.1596624}.
+\newblock \doi{10.1145/1596614.1596624}
 \newblock URL \url{http://doi.acm.org/10.1145/1596614.1596624}.
 
 \bibitem[Lindholm(2004)]{Lind04}
@@ -2587,7 +2587,7 @@ T.~Lindholm.
 \newblock In \emph{Proceedings of the 2004 ACM Symposium on Document
   Engineering}, DocEng '04, pages 1--10, New York, NY, USA, 2004. ACM.
 \newblock ISBN 1-58113-938-1.
-\newblock \doi{10.1145/1030397.1030399}.
+\newblock \doi{10.1145/1030397.1030399}
 \newblock URL \url{http://doi.acm.org/10.1145/1030397.1030399}.
 
 \bibitem[Lindholm and Rüger(2005)]{Lind05}
@@ -2607,7 +2607,7 @@ T.~Mens.
 \newblock \emph{IEEE Trans. Softw. Eng.}, 28\penalty0 (5):\penalty0 449--462,
   May 2002.
 \newblock ISSN 0098-5589.
-\newblock \doi{10.1109/TSE.2002.1000449}.
+\newblock \doi{10.1109/TSE.2002.1000449}
 \newblock URL \url{http://dx.doi.org/10.1109/TSE.2002.1000449}.
 
 \bibitem[Mimram and Di~Giusto(2013)]{CategoryPatchTheory}
@@ -2616,7 +2616,7 @@ S.~Mimram and C.~Di~Giusto.
 \newblock \emph{Electron. Notes Theor. Comput. Sci.}, 298:\penalty0 283--307,
   Nov. 2013.
 \newblock ISSN 1571-0661.
-\newblock \doi{10.1016/j.entcs.2013.09.018}.
+\newblock \doi{10.1016/j.entcs.2013.09.018}
 \newblock URL \url{http://dx.doi.org/10.1016/j.entcs.2013.09.018}.
 
 \bibitem[O'Sullivan(2009)]{Mercurial}
@@ -2650,7 +2650,7 @@ N.~Ramsey and E.~Csirmaz.
 \newblock \emph{SIGSOFT Softw. Eng. Notes}, 26\penalty0 (5):\penalty0 175--185,
   Sept. 2001.
 \newblock ISSN 0163-5948.
-\newblock \doi{10.1145/503271.503233}.
+\newblock \doi{10.1145/503271.503233}
 \newblock URL \url{http://doi.acm.org/10.1145/503271.503233}.
 
 \bibitem[Westfechtel(1991)]{Westfechtel91}
@@ -2660,7 +2660,7 @@ B.~Westfechtel.
   Configuration Management}, SCM '91, pages 68--79, New York, NY, USA, 1991.
   ACM.
 \newblock ISBN 0-89791-429-5.
-\newblock \doi{10.1145/111062.111071}.
+\newblock \doi{10.1145/111062.111071}
 \newblock URL \url{http://doi.acm.org/10.1145/111062.111071}.
 
 \end{thebibliography}
